// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render button with type 1`] = `
<button
  class="uik-btn uik-btn-default uik-btn-middle"
  type="button"
>
  default
</button>
`;

exports[`<Button /> should render button with type 2`] = `
<button
  class="uik-btn uik-btn-default uik-btn-middle"
  type="button"
>
  primary
</button>
`;

exports[`<Button /> should render button with type 3`] = `
<button
  class="uik-btn uik-btn-default uik-btn-middle"
  type="button"
>
  danger
</button>
`;

exports[`<Button /> should render default 1`] = `
<div>
  <button
    class="uik-btn uik-btn-default uik-btn-middle"
    type="button"
  >
    default
  </button>
</div>
`;

exports[`<Loading /> should render default 1`] = `
<div>
  <div>
    loading
  </div>
</div>
`;

exports[`<Loading /> should render loading 1`] = `
<div>
  <div
    class="uik-loading"
    style="display: block;"
  >
    <div>
      <div
        class="uik-loading-mask"
      >
        <i
          class="uik-iconfont uik-icon-loading uik-loading-icon"
          style="font-family: uik-iconfont;"
        />
      </div>
    </div>
    <div
      class="uik-loading-content"
    >
      <div>
        loading
      </div>
    </div>
  </div>
</div>
`;
